# Empty [workspace] terminates Cargo's parent-Cargo.toml walk so this
# fuzz harness is treated as a standalone package, not a workspace
# member of the parent. Required because libfuzzer-sys + nightly toolchain
# need to live outside the host workspace (drives a different resolver).
[workspace]

[package]
name = "lamquant-lossless-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tempfile = "3"

lamquant-core = { package = "lamquant-lml", path = ".." }

[[bin]]
name = "decompress"
path = "fuzz_targets/decompress.rs"
doc = false

[[bin]]
name = "roundtrip"
path = "fuzz_targets/roundtrip.rs"
doc = false

# Current ABIR/BCS2 container parser surface.
[[bin]]
name = "container_header"
path = "fuzz_targets/container_header.rs"
doc = false

[[bin]]
name = "lma_manifest"
path = "fuzz_targets/lma_manifest.rs"
doc = false
